fix input padding on mobile

--- a/src/Index/Profile/main.less
+++ b/src/Index/Profile/main.less
@@ -267,6 +267,7 @@
 								background-color: transparent;
 								font-size: 50px;
 								color: #333;
+								padding: 0;
 							}
 
 							select {
